feat: add main page and routing

--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="icon" href="https://img.icons8.com/emoji/48/null/nazar-amulet.png" type="image/png">
-    <title>Storage</title>
+    <link rel="icon" href="https://img.icons8.com/color/48/null/online-store.png" type="image/png">
+    <link rel="stylesheet" href="/index.css">
+    <title>{{ title }}</title>
 </head>
