--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,10 +1,11 @@
     {{> head }}
 <body>
+    {{> navbar }}
     <div class="container">
         {{{ body }}}
     </div>
 
 
-    {{> footer}}
+    {{> footer }}
 </body>
 </html>
