feat: add pages of courses and add course

--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,1 +1,21 @@
 <h1>Add new Course</h1>
+
+<form action="/add" method="POST">
+    <div class="input-field">
+        <input placeholder="Title" id="title" name="title" type="text" class="validate" required>
+        <label for="title">Course name:</label>
+        <span class="helper-text" data-error="Дни и ночи я скучаю" data-success="OK!"></span>
+    </div>
+    <div class="input-field">
+        <input placeholder="Price" id="price" name="price" type="number" class="validate" required>
+        <label for="price">Course price:</label>
+        <span class="helper-text" data-error="О тебе лишь вспоминаю" data-success="OK!"></span>
+    </div>
+    <div class="input-field">
+        <input placeholder="Img URL" id="img" name="imgurl" type="text" class="validate" required>
+        <label for="img">Img URL:</label>
+        <span class="helper-text" data-error="Любимая моя" data-success="OK!"></span>
+    </div>
+
+    <button class="btn btn-primary">Add course</button>
+</form>
