--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -1,1 +1,24 @@
 <h1>Courses</h1>
+
+{{#if courses.length}}
+    {{#each courses}}
+    <div class="row">
+        <div class="col s6 offset-s3">
+            <div class="card">
+                <div class="card-image">
+                    <img src="{{imgurl}}" alt="{{title}}">
+                </div>
+                <div class="card-content">
+                    <span class="card-title">{{title}}</span>
+                    <p class="price">{{price}}</p>
+                </div>
+                <div class="card-action">
+                    <a href="/courses/{{id}}">Open a course</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    {{/each}}
+{{else}}
+    <p>There are no courses</p>
+{{/if}}
