feat: add model and route for card

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -17,6 +17,11 @@
             {{else}}
                 <li><a href="/add">Add course</a></li>
             {{/if}}
+            {{#if isCard}}
+                <li class="active"><a href="/card">Card</a></li>
+            {{else}}
+                <li><a href="/card">Card</a></li>
+            {{/if}}
         </ul>
     </div>
 </nav>
