--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -12,8 +12,13 @@
                     <span class="card-title">{{title}}</span>
                     <p class="price">{{price}}</p>
                 </div>
-                <div class="card-action">
-                    <a href="/courses/{{id}}">Open a course</a>
+                <div class="card-action actions">
+                    <a href="/courses/{{id}}" target="_blank">Open a course</a>
+                    <a href="/courses/{{id}}/edit?allow=true">Edit info</a>
+                    <form action="/card/add" method="POST">
+                        <input type="hidden" name="id" value="{{id}}">
+                        <button type="submit" class="btn btn-primary">Buy course</button>
+                    </form>
                 </div>
             </div>
         </div>
